fixes for java 8